# semantic-url-shortener

./: README.md  pyproject.toml
