[tool.poetry]
name = "semantic-url-shortener"
version = "0.1.0"
description = "Context-sensitive URL shortener."
authors = ["niquet <maximilian.niquet@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "semantic_url_shortener"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.100.1"}
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
